--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -109,6 +109,19 @@ nav {
   color: white;
 }
 
+.py-1{
+  background-color: #292e31;
+  height: 10%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.centrado{
+  text-align: center;
+}
+
 .card-img-top {
   width: 150px;
   height: 170px;
