--- a/frontend/src/components/product/Product/Product.module.css
+++ b/frontend/src/components/product/Product/Product.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
 
 .cardimgtop {
     width: 100%;
@@ -10,8 +10,8 @@
   
 
   .cardtitle a {
-    color: #2e2e2e;
-    font-Family: 'Pacifico';
+    color: black;
+    font-Family: 'Lato';
     font-size: large;  
 }
   
